fix checkmark vertical alignment

--- a/bigcheck.css
+++ b/bigcheck.css
@@ -44,7 +44,7 @@
 	top: 0;
 	left: 5px;
 	font-size: 14px;
-	line-height: 21px;
+	line-height: 22px;
 	color: transparent;
 }
 
